# robotics4farmers_yolo

./: CMakeLists.txt  package.xml
src/: yolo_segmentation.cpp
